[build-system]
requires = [
  "setuptools>=61.2",
  "setuptools_scm[toml]>=7.0.1",
]

build-backend = "setuptools.build_meta"

[project]
name = "unyt"
description = "A package for handling numpy arrays with units"
authors = [
    { name = "The yt project", email = "yt-dev@python.org" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]
keywords = [
    "unyt",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.3, <3.0",
    "sympy>=1.9.0",
    "packaging>=20.9",
]
dynamic = [
    "version",
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.license]
text = "BSD-3-Clause"

[project.urls]
Homepage = "https://github.com/yt-project/unyt"
Documentation = "https://unyt.readthedocs.io/en/stable/index.html"
Changelog = "https://unyt.readthedocs.io/en/stable/history.html"

[dependency-groups]
test = [
    "pytest-doctestplus>=1.2.1",
    "pytest>=7.2.1",
]
covcheck = [
    "coverage[toml]>=5.0.0",
]
doc = [
    "docutils>=0.21.2",
    "sphinx>=7.4.7",
]
integration = [
    "astropy>=4.0.4",
    "astropy>=5.0.0 ; platform_machine=='arm64' and platform_system=='Darwin'",
    "dask[array,diagnostics]>=2021.4.1",
    "dask[array,diagnostics]>=2021.5.1 ; platform_machine=='arm64' and platform_system=='Darwin'",
    "h5py>=3.0.0",
    "h5py>=3.7.0 ; platform_machine=='arm64' and platform_system=='Darwin'",
    "matplotlib>=3.3.3,!=3.5.0",
    "matplotlib>=3.5.1 ; platform_machine=='arm64' and platform_system=='Darwin'",
    "pint>=0.9",

    # this is redundant with runtime requirements, but needed for tox + tox-uv with
    # UV_RESOLUTION=lowest-direct
    # because tox installs dependency groups *before* installing the package itself
    "numpy>=1.21.3, <3.0",
]

[tool.setuptools]
include-package-data = true
zip-safe = false
license-files = [
    "LICENSE",
]

[tool.setuptools.packages.find]
include = [
    "unyt",
    "unyt.tests",
    "unyt.tests.data",
    "unyt._mpl_array_converter",
]
namespaces = false

[tool.setuptools.package-data]
unyt = [
    "tests/data/old_json_registry.txt",
]


[tool.black]
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | _version.py
  )
)
'''

[tool.ruff]
exclude = [
    ".*/",
    "benchmarks/*.py",
    "paper/*.py",
    "*/_version.py",
    "*/__init__.py",
]
[tool.ruff.lint]
ignore = [
    "E501",
    "B904",
    "UP038", # non-pep604-isinstance
    "B905", # zip-without-explicit-strict
]
select = [
    "E",
    "F",
    "W",
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "YTT", # flake8-2020
    "I",   # isort
    "UP",  # pyupgrade
    "NPY", # numpy specific rules
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.setuptools_scm]
write_to = "unyt/_version.py"
version_scheme = "post-release"

[tool.pytest.ini_options]
addopts = "-ra --ignore=benchmarks --ignore=paper --ignore=unyt/_mpl_array_converter --color=yes"
filterwarnings = [
    "error",
    "ignore:Matplotlib is currently using agg, which is a non-GUI backend, so cannot show the figure.:UserWarning",
    "ignore:FigureCanvasAgg is non-interactive, and thus cannot be shown:UserWarning",
    "ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning",
    'ignore:datetime\.datetime\.utcfromtimestamp\(\) is deprecated:DeprecationWarning', # https://github.com/dateutil/dateutil/pull/1285
    'ignore:mpnumeric is deprecated:DeprecationWarning', # sympy 1.12 VS mpmath 1.4, solution: https://github.com/sympy/sympy/pull/25290
    'ignore:`np.compat`, which was used during the Python 2 to 3 transition, is deprecated since 1.26.0, and will be removed:DeprecationWarning' # from dask 2021.x
]

[tool.coverage.run]
omit = [
    "docs/*",
    "unyt/_version.py",
    "unyt/_on_demand_imports.py",
    "unyt/tests/test_linters.py",
]
