[build-system]
requires = [
  "setuptools>=77.0.0",
  "setuptools_scm[toml]>=7.0.1",
]

build-backend = "setuptools.build_meta"

[project]
name = "unyt"
description = "A package for handling numpy arrays with units"
authors = [
    { name = "The yt project", email = "yt-dev@python.org" },
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]
keywords = [
    "unyt",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.3, <3.0",
    "sympy>=1.9.0",
    "packaging>=20.9",
]
dynamic = [
    "version",
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/yt-project/unyt"
Documentation = "https://unyt.readthedocs.io/en/stable/index.html"
Changelog = "https://unyt.readthedocs.io/en/stable/history.html"

[dependency-groups]
test = [
    "pytest-doctestplus>=1.2.1",
    "pytest>=7.2.1",
]
covcheck = [
    {include-group = "test"},
    "coverage[toml] ; python_version < '3.11'",
    "coverage>=5.0.0",
]
doc = [
    {include-group = "integration"},
    "docutils>=0.21.2",
    "sphinx>=7.4.7",
]
integration = [
    "astropy>=4.0.4",
    "dask[array,diagnostics]>=2021.4.1",
    "h5py>=3.0.0",
    "matplotlib>=3.3.3,!=3.5.0",
    "pint>=0.9",
]

[tool.uv]
# never build the following packages from source. Prefer more recent versions
# with binary distributions even with --resolution=lowest[-direct]
no-build-package = [
    "astropy",
    "bokeh",
    "coverage",
    "h5py",
    "numpy",
    "matplotlib",
    "pandas",
]

# ensure that uv resolves envs that are compatible with macOS arm64,
# even in drastic conditions like --resolution=lowest[-direct],
# taking into account tool.uv.no-build-package
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = [
    "unyt",
    "unyt.tests",
    "unyt.tests.data",
    "unyt._mpl_array_converter",
]
namespaces = false

[tool.setuptools.package-data]
unyt = [
    "tests/data/old_json_registry.txt",
]


[tool.black]
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | _version.py
  )
)
'''

[tool.ruff]
exclude = [
    ".*/",
    "benchmarks/*.py",
    "paper/*.py",
    "*/_version.py",
    "*/__init__.py",
]
[tool.ruff.lint]
ignore = [
    "E501",
    "B904",
    "B905", # zip-without-explicit-strict
]
select = [
    "E",
    "F",
    "W",
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "YTT", # flake8-2020
    "I",   # isort
    "UP",  # pyupgrade
    "NPY", # numpy specific rules
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.setuptools_scm]
write_to = "unyt/_version.py"
version_scheme = "post-release"

[tool.pytest.ini_options]
addopts = "-ra --ignore=benchmarks --ignore=paper --ignore=unyt/_mpl_array_converter --color=yes"
filterwarnings = [
    "error",
    "ignore:Matplotlib is currently using agg, which is a non-GUI backend, so cannot show the figure.:UserWarning",
    "ignore:FigureCanvasAgg is non-interactive, and thus cannot be shown:UserWarning",
    "ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning",
    'ignore:datetime\.datetime\.utcfromtimestamp\(\) is deprecated:DeprecationWarning', # https://github.com/dateutil/dateutil/pull/1285
    'ignore:mpnumeric is deprecated:DeprecationWarning', # sympy 1.12 VS mpmath 1.4, solution: https://github.com/sympy/sympy/pull/25290
    'ignore:`np.compat`, which was used during the Python 2 to 3 transition, is deprecated since 1.26.0, and will be removed:DeprecationWarning' # from dask 2021.x
]

[tool.coverage.run]
source = [
    "unyt",
]
omit = [
    "docs/*",
    "unyt/_version.py",
    "unyt/_on_demand_imports.py",
    "unyt/tests/test_linters.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
